unpackaged/main/default/objects/Bundle_Product__c/Bundle_Product__c.object-meta.xml
<CustomObject>
    <description>Links a product to a bundle for fun and profitable times.</description>
    <label>Bundle Product</label>
    <nameField>
        <displayFormat>PLPR-{0000}</displayFormat>
        <label>Bundle Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>