unpackaged/main/default/objects/Bundle_Product__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <formula>TEXT(Product__r.Billing_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Type</label>
    <type>Text</type>
</CustomField>