unpackaged/main/default/objects/Bundle_Product__c/fields/Bundle_Plan__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Plan__c</fullName>
    <label>Bundle Plan</label>
    <referenceTo>Bundle_Plan__c</referenceTo>
    <relationshipLabel>Bundle Products</relationshipLabel>
    <relationshipName>Bundle_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>