unpackaged/main/default/objects/Bundle_Product__c/fields/Discount_Override__c.field-meta.xml
<CustomField>
    <fullName>Discount_Override__c</fullName>
    <inlineHelpText>This value will *override* the Bundle&#39;s default discount level if it&#39;s populated. Leave blank to apply the Bundle Discount.</inlineHelpText>
    <label>Percent Discount Override</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>