unpackaged/main/default/objects/Bundle_Product__c/fields/Fixed_Price_Discount_Override__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Discount_Override__c</fullName>
    <label>Fixed Price Discount Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>