unpackaged/main/default/objects/Bundle_Product__c/fields/Minimum_Price_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Price_Allowed__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The product cannot be discounted to less than this price.</inlineHelpText>
    <label>Minimum Price Allowed</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>