unpackaged/main/default/objects/Bundle_Product__c/fields/Name_Unique__c.field-meta.xml
<CustomField>
    <fullName>Name_Unique__c</fullName>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>