unpackaged/main/default/objects/Bundle_Product__c/fields/PriceBook_Entry_Name__c.field-meta.xml
<CustomField>
    <fullName>PriceBook_Entry_Name__c</fullName>
    <description>We can&#39;t do lookups to pricebooks, so..</description>
    <label>PriceBook Entry Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>