unpackaged/main/default/objects/Bundle_Product__c/fields/Pricebook_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_ID__c</fullName>
    <inlineHelpText>Pricebook ID. Set by a trigger. Do not edit.</inlineHelpText>
    <label>Pricebook ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>