unpackaged/main/default/objects/Bundle_Product__c/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <description>We can&#39;t do lookups to the pricebook.</description>
    <inlineHelpText>The pricebook name.</inlineHelpText>
    <label>Pricebook Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>