unpackaged/main/default/objects/Bundle_Product__c/fields/PriceBookEntry_ID__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntry_ID__c</fullName>
    <inlineHelpText>Do not enter. Set automtically by a trigger. (If you edit this, it should reset.)</inlineHelpText>
    <label>PriceBookEntry ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>