unpackaged/main/default/objects/Bundle_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>LInk to an Active product. The product needs to be in the Bundle Plan&#39;s pricebook.</inlineHelpText>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Products (Product)</relationshipLabel>
    <relationshipName>Bundle_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>