unpackaged/main/default/objects/Bundle_Product__c/fields/Product_Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Active_Status__c</fullName>
    <formula>Product__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the product acive? It has to be.</inlineHelpText>
    <label>Product Active Status</label>
    <type>Checkbox</type>
</CustomField>