unpackaged/main/default/objects/Bundle_Product__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Copied from the Product whenever the Bundle Product is edited.</description>
    <label>Product Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>