unpackaged/main/default/objects/Bundle_Product__c/fields/Product_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Formula__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name (Formula)</label>
    <type>Text</type>
</CustomField>