unpackaged/main/default/objects/Bundle_Product__c/fields/Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price__c</fullName>
    <description>The price this product is listed in the *standard* price book for.</description>
    <label>Standard Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>