unpackaged/main/default/objects/Bundle_Product__c/validationRules/Minimum_Price_lower_than_BundlePrice.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Price_lower_than_BundlePrice</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Price_Allowed__c &gt;  Bundle_Price__c</errorConditionFormula>
    <errorDisplayField>Minimum_Price_Allowed__c</errorDisplayField>
    <errorMessage>MInimum Price can&#39;t be higher than the standard Bundle Price</errorMessage>
</ValidationRule>