unpackaged/main/default/objects/Bundle_Product__c/validationRules/Only_One_Discount_Override.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_One_Discount_Override</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK( Fixed_Price_Discount_Override__c )
 &amp;&amp; !ISBLANK( Discount_Override__c )</errorConditionFormula>
    <errorMessage>You can only have one type of discount override!</errorMessage>
</ValidationRule>