unpackaged/main/default/objects/Bundle_Product__c/validationRules/Pricebook_ID_Doesnt_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Pricebook_ID_Doesnt_Match</fullName>
    <active>false</active>
    <description>The Pricebook ID of a product has to match the Plan</description>
    <errorConditionFormula>!ISNEW()
 &amp;&amp; Pricebook_ID__c !=  Bundle_Plan__r.Price_Book__c</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>This product is not in the Bundle&#39;s Pricebook.</errorMessage>
</ValidationRule>