unpackaged/main/default/objects/Bundle_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bundle_Plan__c</columns>
    <columns>Product__c</columns>
    <columns>PriceBookEntry_ID__c</columns>
    <columns>Product_Name_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>